Fixed scrollbars on different resolutions

--- a/Angular/Map_UI/src/app/modules/module-one/component-one/component-one.component.scss
+++ b/Angular/Map_UI/src/app/modules/module-one/component-one/component-one.component.scss
@@ -1,5 +1,5 @@
 .example-sidenav-content {
-  height: 95vh;
+  height: calc(100vh - 64px);
 }
 
 .example-sidenav {
@@ -12,7 +12,7 @@
 }
 
 .esri-view {
-  height: 100%;
+  height: 90%;
   width: 100%;
   outline: none;
 }
@@ -22,5 +22,5 @@
 }
 
 ::ng-deep .esri-view {
-  height: 96% !important;
+  height: calc(100vh - 110px) !important;
 }
